# AlarmNotifications

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alarmconfiguration.cpp  alarmconfiguration.h  alarmserverconnector.cpp  alarmserverconnector.h  alarmstatusentry.cpp  alarmstatusentry.h  beedo.cpp  beedo.h  beedo.qrc  cmsclient.cpp  cmsclient.h  configfilelocation.inc  configscreen.cpp  configscreen.h  daemon.cpp  daemon.h  desktopalarmwidget.cpp  desktopalarmwidget.h  desktopalarmwidgetkde4.cpp  desktopalarmwidgetkde4.h  desktopalarmwidgetqt.cpp  desktopalarmwidgetqt.h  doxygen.config  doxygen.inc  emailsender.cpp  emailsender.h  emailsender_dummy.cpp  exceptionhandler.cpp  exceptionhandler.h  flashlight.cpp  flashlight.h  main_beedo.cpp  main_config.cpp  main_daemon.cpp  main_desktopwidget-kde4.cpp  main_desktopwidget.cpp  (+4 more)
icons/: README
